Preventing text selection on mobile buttons and fixed selected effect index

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -65,8 +65,14 @@ body {
 
 .preset-button-text {
   font-size: 18px !important;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .preset-button-sub-text {
   font-size: 12px !important;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
